--- a/apps/core/templates/core/sequencing_create.html
+++ b/apps/core/templates/core/sequencing_create.html
@@ -17,6 +17,14 @@ Create Sequencing
                 </thead>
             </table>
          </fieldset><br>
+        <fieldset>
+            <legend style="color:#5D4037">Sequencing Details</legend>
+            <table class="table-condensed">
+                <thead>
+                {{seqdetail_formset}}
+                </thead>
+            </table>
+         </fieldset><br>
         <input class="btn btn-primary btn-sm" type="submit" name="create" value="Create">
     </form><br>
 </div>
