--- a/apps/core/templates/core/sequencing_detail.html
+++ b/apps/core/templates/core/sequencing_detail.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title %}
-Library Details
+Sequencing Details
 {% endblock %}
 
 {% block body %}
@@ -12,7 +12,7 @@ Library Details
     <div class="container" style="float:left; width:35%; padding:0">
         <table class="table-striped">
             <tbody>
-                {% for field in library.get_fields %}
+                {% for field in sequencing.get_fields %}
                 <tr><b>{{field}}:</b></tr><br>
                 {% endfor %}
             </tbody>
@@ -21,7 +21,7 @@ Library Details
     <div class="container" style="float:left; width:65%; padding:0">
         <table class="table-striped">
             <tbody>
-                {% for value in library.get_values %}
+                {% for value in sequencing.get_values %}
                 <tr>{{value}}</tr><br>
                 {% endfor %}
             </tbody>
@@ -32,7 +32,7 @@ Library Details
     
 <!-- Sublibrary Information -->
 <div class="container">
-    <h4 style="color:#5D4037">Sublibrary Information</h4>
+    <h4 style="color:#5D4037">Sequencing Details</h4>
     {% if sample.has_celltable %}
     <div class="table-responsive" style="text-align:center;">
         <table class="table-striped table-bordered">
@@ -57,94 +57,11 @@ Library Details
         </table>
     </div>    
     {% else %}
-    <h5><i class="text-warning">There is no sublibrary information for this library!</i></h5>
+    <h5><i class="text-warning">There is no sequencing details for this library!</i></h5>
     {% endif %}
 </div><br>
 <!-- end of Sublibrary Information -->
     
-<!-- Library Sample Detail -->
-<div class="container">
-    <h4 style="color:#5D4037">Library Sample Detail</h4>
-    {% if sample.has_celltable and sample.celltable.library %}
-    <div class="table-responsive" style="text-align:center;">
-        <table class="table-striped table-bordered">
-            <thead>
-                <tr>
-                    {% for field in sample.celltable.library.get_fields %}
-                    <th>{{field}}</th>
-                    {% endfor %}
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    {% for value in sample.celltable.library.get_values %}
-                    <td>{{value}}</td>
-                    {% endfor %}
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    {% else %}
-    <h5><i class="text-warning">There is no library sample detail for this library!</i></h5>
-    {% endif %}
-</div><br>
-<!-- end of Library Sample Detail -->  
-
-<!-- Library Construction Information -->
-<div class="container">
-    <h4 style="color:#5D4037">Library Construction Information</h4>
-    {% if sample.has_celltable and sample.celltable.analyte %}
-    <div class="table-responsive" style="text-align:center;">        
-        <table class="table-striped table-bordered">
-            <thead>
-                <tr>
-                    {% for field in sample.celltable.analyte.get_fields %}
-                    <th>{{field}}</th>
-                    {% endfor %}
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    {% for value in sample.celltable.analyte.get_values %}
-                    <td>{{value}}</td>
-                    {% endfor %}
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    {% else %}
-    <h5><i class="text-warning">There is no library construction information for this library!</i></h5>
-    {% endif %}
-</div><br>
-<!-- end of Library Construction Information -->
-  
-<!-- Library Quantification and Storage -->
-<div class="container">
-    <h4 style="color:#5D4037">Library Quantification and Storage</h4>
-    {% if sample.has_celltable and sample.celltable.sequencinginfo %}
-    <div class="table-responsive" style="text-align:center;">
-        <table class="table-striped table-bordered">
-            <thead>
-                <tr>
-                    {% for field in sample.celltable.sequencinginfo.get_fields %}
-                    <th>{{field}}</th>
-                    {% endfor %}
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    {% for value in sample.celltable.sequencinginfo.get_values %}
-                    <td>{{value}}</td>
-                    {% endfor %}
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    {% else %}
-    <h5><i class="text-warning">There is no library quantification and storage for this library!</i></h5>
-    {% endif %}
-</div><br>
-<!-- end of Library Quantification and Storage -->
 {% endblock %}
 
 
