--- a/apps/core/templates/core/sequencing_update.html
+++ b/apps/core/templates/core/sequencing_update.html
@@ -7,12 +7,25 @@ Edit Sequencing
 
 {% block body %}
 <div class="container" style="background-color:#F5F5F5;">
-	<form action="{% url 'core:sequencing_update' pk=pk %}" method="POST">
-		{% csrf_token %}
-		<table class="table">
-			{{form}}	
-		</table>
-	<input class="btn btn-primary btn-sm" type="submit" name="update" value="update">
-	</form><br>
+    <form action="{% url 'core:sequencing_update' pk=pk %}" method="POST">
+        {% csrf_token %}
+        <fieldset>
+            <legend style="color:#5D4037">Sequencing Information</legend>
+            <table class="table-condensed">
+                <thead>
+                {{form}}
+                </thead>
+            </table>
+         </fieldset><br>
+        <fieldset>
+            <legend style="color:#5D4037">Sequencing Details</legend>
+            <table class="table-condensed">
+                <thead>
+                {{seqdetail_formset}}
+                </thead>
+            </table>
+         </fieldset><br>
+    <input class="btn btn-primary btn-sm" type="submit" name="update" value="update">
+    </form><br>
 </div>
 {% endblock %}
