--- a/apps/core/templates/core/sequencing_detail.html
+++ b/apps/core/templates/core/sequencing_detail.html
@@ -7,11 +7,11 @@ Sequencing Details
 
 {% block body %}
 <!-- Meta Information -->
-<div class="container">
-    <h4 style="color:#5D4037">Meta Information</h4>
+<div class="container" style="background-color:#FFF3E0;">
     <div class="container" style="float:left; width:35%; padding:0">
         <table class="table-striped">
             <tbody>
+                <tr><b>Library:</b></tr><br>
                 {% for field in sequencing.get_fields %}
                 <tr><b>{{field}}:</b></tr><br>
                 {% endfor %}
@@ -21,6 +21,7 @@ Sequencing Details
     <div class="container" style="float:left; width:65%; padding:0">
         <table class="table-striped">
             <tbody>
+                <tr><a href="{{sequencing.library.get_absolute_url}}">{{sequencing.library}}</a></tr><br>
                 {% for value in sequencing.get_values %}
                 <tr>{{value}}</tr><br>
                 {% endfor %}
@@ -33,35 +34,39 @@ Sequencing Details
 <!-- Sublibrary Information -->
 <div class="container">
     <h4 style="color:#5D4037">Sequencing Details</h4>
-    {% if sample.has_celltable %}
-    <div class="table-responsive" style="text-align:center;">
-        <table class="table-striped table-bordered">
-            <thead>
-                <tr>
-                    <th>Sub_library ID</th>
-                    {% for field in celltable_fields %}
-                    <th>{{field}}</th>
-                    {% endfor %}
-                </tr>
-            </thead>
+    {% if sequencing.has_sequencing_detail %}
+    <div class="container" style="float:left; width:35%; padding:0">
+        <table class="table-striped">
             <tbody>
-                {% for cell in sample.celltable.cell_set.all %}
-                <tr>
-                    <td>{{cell}}</td>
-                    {% for value in cell.get_values %}
-                    <td>{{value}}</td>
-                    {% endfor %}
-                </tr>
+                {% for field in sequencing.sequencingdetail.get_fields %}
+                <tr><b>{{field}}:</b></tr><br>
                 {% endfor %}
             </tbody>
         </table>
-    </div>    
+    </div>
+    <div class="container" style="float:left; width:65%; padding:0">
+        <table class="table-striped">
+            <tbody>
+                {% for value in sequencing.sequencingdetail.get_values %}
+                <tr>{{value}}</tr><br>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
     {% else %}
     <h5><i class="text-warning">There is no sequencing details for this library!</i></h5>
     {% endif %}
 </div><br>
 <!-- end of Sublibrary Information -->
-    
+
+<!-- footer bottons -->
+<div class="container" style="margin-bottom:5px;">
+    <a class="btn btn-warning btn-sm" style="float:left; margin:5px;" href="{% url 'core:sequencing_update' pk=sequencing.pk %}">Edit</a>
+    <a class="btn btn-danger btn-sm" style="float:left; margin:5px;" href="{% url 'core:sequencing_delete' pk=sequencing.pk %}">Delete</a>
+    <a style="float:right; margin:5px;" href="{% url 'core:sequencing_list' %}">List of sequencings</a>
+</div><br>
+<!-- end of footer bottons -->
+
 {% endblock %}
 
 
