--- a/apps/core/templates/core/sequencing_detail.html
+++ b/apps/core/templates/core/sequencing_detail.html
@@ -33,7 +33,7 @@ Sequencing Details
     
 <!-- Sublibrary Information -->
 <div class="container">
-    <h4 style="color:#5D4037">Sequencing Details</h4>
+    <h4>Sequencing Details</h4>
     {% if sequencing.has_sequencing_detail %}
     <div class="container" style="float:left; width:35%; padding:0">
         <table class="table-striped">
