--- a/apps/core/templates/core/sequencing_create.html
+++ b/apps/core/templates/core/sequencing_create.html
@@ -26,6 +26,7 @@ Create Sequencing
             </table>
          </fieldset><br>
         <input class="btn btn-primary btn-sm" type="submit" name="create" value="Create">
+        <a class="btn btn-default btn-sm" href="{% url 'core:sequencing_list' %}">Cancel</a>
     </form><br>
 </div>
 {% endblock %}
