--- a/apps/core/templates/core/sequencing_update.html
+++ b/apps/core/templates/core/sequencing_update.html
@@ -25,7 +25,8 @@ Edit Sequencing
                 </thead>
             </table>
          </fieldset><br>
-    <input class="btn btn-primary btn-sm" type="submit" name="update" value="update">
+        <input class="btn btn-primary btn-sm" type="submit" name="update" value="update">
+        <a class="btn btn-default btn-sm" href="{% url 'core:sequencing_list' %}">Cancel</a>
     </form><br>
 </div>
 {% endblock %}
