--- a/apps/core/templates/core/sequencing_delete.html
+++ b/apps/core/templates/core/sequencing_delete.html
@@ -6,12 +6,12 @@ Delete sequencing
 {% endblock %}
 
 {% block body %}
-<div class="container">
-    <h3>Do you want to detete sequencing <i>{{sequencing.library.sample.sample_id}}_{{sequencing.library.pool_id}}</i>?</h3>
+<div class="container graybg">
+    <h5>Are you sure you want to detete sequencing <i class="emph">{{sequencing}}</i>?</h5><br> 
     <form action="{% url 'core:sequencing_delete' pk=pk %}" method="POST">
-    	{% csrf_token %}
-        <input class="btn btn-danger btn-sm" type="submit" name="delete" value="Delete">
+        {% csrf_token %}
+        <input class="btn btn-danger btn-sm" type="submit" name="delete" value="Yes, I'm sure">
         <a class="btn btn-default btn-sm" href="{% url 'core:sequencing_list' %}">Cancel</a>
-    </form>
+    </form><br>
 </div>
 {% endblock %}
