--- a/apps/core/templates/core/sequencing_list.html
+++ b/apps/core/templates/core/sequencing_list.html
@@ -16,7 +16,7 @@ List of Sequencings
             <thead>
                 <tr>
                     <th>Sample ID</th>
-                    <th>Pool ID</th>
+                    <th>Chip ID</th>
                     <th>Submission date</th>
                     <th></th>
                 </tr>
