--- a/apps/core/templates/core/sequencing_detail.html
+++ b/apps/core/templates/core/sequencing_detail.html
@@ -11,12 +11,12 @@ Sequencing Details
     <table class="table-condensed">
         <tr>
             <th id="thid">Library:</th>
-            <td id="tdid"><a href="{{sequencing.library.get_absolute_url}}">{{sequencing.library}}</a></td>
+            <td id="tdid" class="notes"><a href="{{sequencing.library.get_absolute_url}}">{{sequencing.library}}</a></td>
         </tr>
         {% for field, value in sequencing.get_field_values.items %}
         <tr>
             <th id="thid">{{field}}:</th>
-            <td id="tdid">{{value}}</td>
+            <td id="tdid" class="notes">{{value}}</td>
         </tr>
         {% endfor %}
     </table>
@@ -31,7 +31,7 @@ Sequencing Details
         {% for field, value in sequencing.sequencingdetail.get_field_values.items %}
         <tr>
             <th id="thid">{{field}}:</th>
-            <td id="tdid">{{value}}</td>
+            <td id="tdid" class="notes">{{value}}</td>
         </tr>
         {% endfor %}
     </table>
