--- a/apps/core/templates/core/sequencing_create_from_library.html
+++ b/apps/core/templates/core/sequencing_create_from_library.html
@@ -24,6 +24,12 @@ Create Sequencing
                         <select id="id_library" name="library">
                             <option value="{{library_id}}" selected="selected">{{library}}</option>
                         </select>
+                    {% elif field.name == "relates_to" %}
+                        <select class="selectpicker" id="id_relates_to" name="relates_to" multiple data-none-selected-text="--------">
+                            {% for seq in related_seqs %}
+                            <option value={{seq.id}}>{{seq}}</option>
+                            {% endfor %}
+                        </select>
                     {% else %}
                         {{ field }}
                     {% endif %}
