--- a/apps/core/templates/core/sequencing_create.html
+++ b/apps/core/templates/core/sequencing_create.html
@@ -13,7 +13,26 @@ Create Sequencing
             <legend>Sequencing Information</legend>
             <table class="table-condensed">
                 <thead>
-                {{form}}
+                {% for field in form %}
+                <tr>
+                    <th>
+                    {{field.label_tag}}
+                    </th>
+                    <td>
+                    {{ field.errors }}
+                    {% if field.name == "library" and library_id %}
+                        <select id="id_library" name="library">
+                            <option value="{{library_id}}" selected="selected">{{library}}</option>
+                        </select>
+                    {% else %}
+                        {{ field }}
+                    {% endif %}
+                    {% if field.help_text %}
+                        <p class="helptext">{{ field.help_text|safe }}</p>
+                    {% endif %}
+                    </td>
+                </tr>
+                {% endfor %}
                 </thead>
             </table>
          </fieldset><br>
