--- a/apps/core/templates/core/sequencing_list.html
+++ b/apps/core/templates/core/sequencing_list.html
@@ -12,7 +12,7 @@ List of Sequencings
 </div>
 <div class="container" style="background-color:#F5F5F5;">
     <div class="table-responsive">
-        <table class="table table-striped">
+        <table id="datatable" class="table table-striped">
             <thead>
                 <tr>
                     <th>Sample ID</th>
