--- a/apps/core/templates/core/sequencing_detail.html
+++ b/apps/core/templates/core/sequencing_detail.html
@@ -7,7 +7,14 @@ Sequencing Details
 
 {% block body %}
 <!-- Meta Information -->
-<div class="container" style="background-color:#FFF3E0;">
+<div class="container card">
+    <div style="float:right; margin-top:5px;">
+        <select class="selectpicker" id="action">
+        <option value="{% url 'core:sequencing_get_samplesheet' pk=sequencing.pk %}">Download SampleSheet</option>
+        <option value="{% url 'core:sequencing_get_gsc_form' pk=sequencing.pk %}">Create GSC submission form</option>
+      </select>
+      <button class="btn btn-primary btn-sm" onclick="window.location.href=document.getElementById('action').value" class="btn btn-default">Go</button>
+    </div>
     <table class="table-condensed">
         <tr>
             <th id="thid">Library:</th>
@@ -31,7 +38,7 @@ Sequencing Details
 </div><br>
 <!-- end of Meta Information -->
     
-<!-- Sublibrary Information -->
+<!-- Sequencing Detail -->
 <div class="container">
     <h4>Sequencing Details</h4>
     {% if sequencing.has_sequencing_detail %}
@@ -47,13 +54,12 @@ Sequencing Details
     <h5><i class="text-warning">There is no sequencing details for this library!</i></h5>
     {% endif %}
 </div><br>
-<!-- end of Sublibrary Information -->
+<!-- end of Sequencing Detail -->
 
 <!-- footer bottons -->
 <div class="container" style="margin-bottom:5px;">
     <a class="btn btn-warning btn-sm" style="float:left; margin:5px;" href="{% url 'core:sequencing_update' pk=sequencing.pk %}">Edit</a>
     <a class="btn btn-danger btn-sm" style="float:left; margin:5px;" href="{% url 'core:sequencing_delete' pk=sequencing.pk %}">Delete</a>
-    <a class="btn btn-primary btn-sm" style="float:left; margin-top:5px;" href="{% url 'core:sequencing_get_samplesheet' pk=sequencing.pk %}">Get Samplesheet</a>
     <a style="float:right; margin:5px;" href="{% url 'core:sequencing_list' %}">List of sequencings</a>
 </div><br>
 <!-- end of footer bottons -->
