--- a/apps/core/templates/core/sequencing_detail.html
+++ b/apps/core/templates/core/sequencing_detail.html
@@ -7,7 +7,7 @@ Sequencing Details
 
 {% block body %}
 <!-- Meta Information -->
-<div class="container card">
+<div class="container" style="background-color:#FFF3E0;">
     <div style="float:right; margin-top:5px;">
         <select class="selectpicker" id="action">
         <option value="{% url 'core:sequencing_get_samplesheet' pk=sequencing.pk %}">Download SampleSheet</option>
