--- a/apps/core/templates/core/sequencing_create.html
+++ b/apps/core/templates/core/sequencing_create.html
@@ -24,7 +24,7 @@ Create Sequencing
                         <select id="id_library" name="library">
                             <option value="{{library_id}}" selected="selected">{{library}}</option>
                     {% elif field.name == "relates_to" %}
-                        <select class="selectpicker" id="id_relates_to" name="relates_to" multiple data-none-selected-text="--------">
+                        <select class="selectpicker" data-live-search="True" id="id_relates_to" name="relates_to" multiple data-none-selected-text="--------">
                             {% for seq in related_seqs %}
                             <option value={{seq.id}}>{{seq}}</option>
                             {% endfor %}
