--- a/apps/core/templates/core/sequencing_list.html
+++ b/apps/core/templates/core/sequencing_list.html
@@ -15,20 +15,33 @@ List of Sequencings
         <table id="datatable" class="table table-striped">
             <thead>
                 <tr>
-                    <th>Sample ID</th>
+                    <th>Flow cell/Lane ID</th>
                     <th>Chip ID</th>
+                    <th>Sample ID</th>
+                    <th>GSC library ID</th>
+                    <th>Library Jira Ticket</th>
                     <th>Submission date</th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
+                <br/>
                 {% for sequencing in sequencings %}
                 <tr>
-                    <td><a href="{% url 'core:sequencing_detail' pk=sequencing.pk %}">{{sequencing.library.sample.sample_id}}</a></td>
-                    <td>{{sequencing.library.pool_id}}</td>
+                    <td><a href="{% url 'core:sequencing_detail' pk=sequencing.pk %}">
+                        {% if sequencing.sequencingdetail.flow_cell_id %}
+                        {{sequencing.sequencingdetail.flow_cell_id}}
+                        {% else %}
+                         # No flow cell ID
+                        {% endif %}
+                    </a></td>
+                    <td><a href="{% url 'core:library_detail' pk=sequencing.library.pk %}">{{sequencing.library.pool_id}}</a></td>
+                    <td><a href="{% url 'core:sample_detail' pk=sequencing.library.sample.pk %}">{{sequencing.library.sample.sample_id}}</td>
+                    <td>{{sequencing.sequencingdetail.gsc_library_id}}</td>
+                    <td><a href="https://www.bcgsc.ca/jira/browse/{{sequencing.library.jira_ticket}}">{{sequencing.library.jira_ticket}}</a></td>
                     <td>{{sequencing.submission_date}}</td>
                     <td>
-                        <p style="float:right;"><a style="margin-right:2px;" href="{% url 'core:sequencing_update' pk=sequencing.pk %}"><i class="fa fa-pencil" aria-hidden="true" style="color:orange;" "></i> edit</a>
+                        <p style="float:right;"><a style="margin-right:2px;" href="{% url 'core:sequencing_update' pk=sequencing.pk %}"><i class="fa fa-pencil" aria-hidden="true" style="color:orange;"></i> edit</a>
                         <a href="{% url 'core:sequencing_delete' pk=sequencing.pk %}"><i class="icon-remove-sign" style="color:red"></i> delete</a></p>
                     </td>
                 </tr>
